# webinar-session-jwt

./: .env  .gitignore  Dockerfile  MANIFEST.in  README.md  docker-compose.yml  pyproject.toml
src/auth_app/: main.py  models.py
src/auth_app/api/: dependencies.py
src/auth_app/api/routes/: jwt.py  session.py  users.py
src/auth_app/core/: config.py  db.py  db_manager.py  security.py  tokens.py
src/auth_app/domain/: models.py  repositories.py  schemas.py  services.py
src/auth_app/static/: index.html
